--- a/index.html
+++ b/index.html
@@ -42,10 +42,12 @@
 
   <div class="footer">
     <div class="links">
-      <a href="#"><i class="fab fa-fw fa-facebook-f"></i></a>
-      <a href="#"><i class="fab fa-fw fa-github"></i></a>
-      <a href="#"><i class="fab fa-fw fa-twitter"></i></a>
-      <a href="#"><i class="fab fa-fw fa-instagram"></i></a>
+      <ul>
+        <li><a href="#"><i class="fab fa-facebook-square"></i></a></li>
+        <li><a href="#"><i class="fab fa-fw fa-github"></i></a></li>
+        <li><a href="#"><i class="fab fa-fw fa-twitter"></i></a></li>
+        <li><a href="#"><i class="fab fa-fw fa-instagram"></i></a></li>
+      </ul>
       <p>This website was coded with <i class="fas fa-heart"></i> by Nasser Atiyeh.</p>
     </div>
   </div>
