--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <li><a href="#"><i class="fab fa-fw fa-twitter"></i></a></li>
         <li><a href="#"><i class="fab fa-fw fa-instagram"></i></a></li>
       </ul>
-      <p>This website was coded with <i class="fas fa-heart"></i> by Nasser Atiyeh.</p>
+      <p>This website was coded with <i class="fas fa-heart"></i> by <a class="profile" href="http://natiyeh.github.io/landing/">Nasser Atiyeh</a>.</p>
     </div>
   </div>
 
