--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="css/components/banner.css">
   <link rel="stylesheet" href="css/components/container.css">
   <link rel="stylesheet" href="css/components/footer.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
 </head>
 <body>
   <div class="banner">
