--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@
   </div>
   <div class="container">
     <h2 class="text-center">How it works</h2>
-    <div class="cards">
-      <div class="card">
+    <div class="cards row">
+      <div class="card col-sm-12 col-lg-4">
         <img src="images/product.svg" alt="">
         <h4>Plug in</h4>
         <p>put your family information into the app and watch your family tree grow to life.</p>
       </div>
-      <div class="card">
+      <div class="card col-sm-12 col-lg-4">
         <img src="images/learn.svg" alt="">
         <h4>Share</h4>
         <p>share with other members of your family to build the ultimate family tree.</p>
       </div>
-      <div class="card">
+      <div class="card col-sm-12 col-lg-4">
         <img src="images/apply.svg" alt="">
         <h4>Keep in touch</h4>
         <p>keep in touch with all your family members in one place with an easy to use interface and application.</p>
